<resources>
    <string name="app_name">Manage Spending</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name_or_email">User name or email</string>
    <string name="pass_word">Pass Word</string>
    <string name="remember_pass_word">Remember Pass Word</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_money">Total Money:</string>
    <string name="shopping">Shopping</string>
    <string name="new_spending">New Spending</string>
    <string name="date_time">Date-Time</string>
    <string name="reason">Reason</string>
    <string name="currency">Currency</string>
    <string name="note">Note</string>
    <string name="local">Local</string>
    <string name="cost">Cost</string>
    <string name="new_cost">New Cost</string>
    <string name="money">Money</string>
    <string name="menu">Menu</string>
    <string name="product">Product</string>
    <string name="update">Update</string>
    <string name="total">Total:</string>
    <string name="spent">Spent:</string>
    <string name="count">Count:</string>
    <string name="currencyz">Currency</string>

</resources>
