<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@color/MainColor"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_user"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/black"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:hint="@string/user_name_or_email"
        android:layout_height="50dp"
        android:background="@drawable/shadown_edt" />

    <EditText
        android:id="@+id/edt_Password"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:hint="@string/pass_word"
        android:inputType="textPassword"
        android:layout_height="50dp"
        android:textColorHint="@color/black"
        android:background="@drawable/shadown_edt" />
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_marginTop="35dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/custom_btn"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cb_Remember"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/remember_pass_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>
</LinearLayout>