<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/shadown_edt"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btn_update"
            android:layout_gravity="center_vertical"
            android:layout_width="90dp"
            android:layout_height="150dp"
            android:src="@drawable/dollar"/>

        <LinearLayout
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:textColor="@color/Red"
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/cost"
                    android:textSize="25sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/cost"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_time"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:textSize="25sp"
                android:textStyle="italic" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:src="@drawable/ic_delete_forever_black_24dp" />

    </LinearLayout>


</LinearLayout>